--- a/index.css
+++ b/index.css
@@ -8,6 +8,27 @@
     color: white;
     margin: 0;
 }
+.custom-icon {
+
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 6px;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+
+    height: 30px;
+
+
+}
+
+.custom-icon:hover {
+
+    background-color: red;
+    transition: 0.3s;
+}
 @media(min-width:768px){
     .content-box{
         width: 70%;
@@ -97,27 +118,7 @@
     flex: 0 0 auto;
 }
 
-.custom-icon {
 
-    color: #ffffff;
-    border: 1px solid #ffffff;
-    padding: 6px;
-
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-
-    height: 30px;
-
-
-}
-
-.custom-icon:hover {
-
-    background-color: red;
-    transition: 0.3s;
-}
 
 /* navbar */
 .font-michroma {
@@ -598,7 +599,7 @@
     padding-bottom: 10px;
 }
 
-.section8 h2 {
+.contact h2 {
     font-family: "Michroma", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -608,7 +609,7 @@
     padding: 20px 0px;
 }
 
-.section8 h3 {
+.sec8-h3 {
     font-family: "Manrope", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -656,11 +657,7 @@
 }
 
 /* section9 */
-.sec9-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-}
+
 
 .section9 h3 {
     font-family: "Michroma", sans-serif;
@@ -671,15 +668,15 @@
     padding: 5px 0px;
 }
 
-@media(max-width:300px) {
+@media(max-width:576px) {
 
-    .section9 h3:last-of-type {
-        font-size: 10px;
+    .sec9-last-h3 {
+        font-size: 11px !important;
     }
-}
+} 
 
 /* footer */
-.footer-p {
+/* .footer-p {
     font-family: "Manrope", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -710,4 +707,45 @@
 .footer li:hover {
     color: #FF493B;
     transition: 0.3s;
+} */
+
+
+.footer-p{
+    font-family: "Manrope", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 30px;
+    padding: 20px 0px;
 }
+
+.footer h3{
+    font-family: "Michroma", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 28px;
+}
+.footer ul li{
+    font-family: "Manrope", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 15px;
+    line-height: 60px;
+}
+
+.footer ul li:hover{
+    color: #FF493B;
+    transition: 0.3s;
+}
+
+/* footer btm */
+
+.footer-btm-link{
+    color: white;
+}
+.footer-btm-link:hover{
+    color: #FF493B;
+    transition: 0.3s;
+}
+
