number animation added

--- a/index.css
+++ b/index.css
@@ -202,7 +202,7 @@
 
 
 
-/* section1 css */
+
 
 
 
@@ -749,3 +749,10 @@
     transition: 0.3s;
 }
 
+
+/* section-2 */
+/* #storage_number{
+    font-size:1.5rem;
+    margin:4rem auto 1rem auto;
+    width:200px;
+} */
